--- a/views/layouts/landingPage.html
+++ b/views/layouts/landingPage.html
@@ -4,14 +4,119 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://cdn.tailwindcss.com"></script>
-		<link
-			rel="stylesheet"
-			href="public/css/style.css
-    "
-		/>
+		<link rel="stylesheet" href="../../public/css/style.css" />
 		<title>TravelMate</title>
 	</head>
 	<body>
-        
-    </body>
+		<div class="bg-white">
+			<header class="absolute inset-x-0 top-0 z-50">
+				<div class="mx-auto max-w-7xl">
+					<div class="px-6 pt-6 lg:max-w-2xl lg:pl-8 lg:pr-0">
+						<nav
+							class="flex items-center justify-between lg:justify-start"
+							aria-label="Global"
+						>
+							<div class="hero-content text-neutral-content">
+								<div class="max-w-md flex flex-row">
+									<h1
+										class="text-amber-900 font-serif text-5xl drop-shadow-2xl"
+									>
+										TravelMate
+									</h1>
+									<img
+										class="h-10 w-10"
+										src="../../public/images/location-dot-solid.svg"
+										alt=""
+									/>
+								</div>
+							</div>
+							<div class="hidden lg:ml-12 lg:flex lg:gap-x-14">
+								<a
+									href="#"
+									class="text-md font-semibold leading-6 text-gray-900 font-mono ml-32"
+									>Log in</a
+								>
+
+								<a
+									href="#"
+									class="text-md font-semibold leading-6 text-gray-900 font-mono"
+									>Sign up</a
+								>
+							</div>
+						</nav>
+					</div>
+				</div>
+				<!-- Mobile menu, show/hide based on menu open state. -->
+				<div class="lg:hidden" role="dialog" aria-modal="true">
+					<!-- Background backdrop, show/hide based on slide-over state. -->
+
+					<div
+						class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+					>
+						<div class="flex items-center justify-between">
+							<a href="#" class="-m-1.5 p-1.5">
+								<span class="sr-only">Your Company</span>
+								<img
+									class="h-8 w-auto"
+									src="../../public/images/landing-travel.jpg"
+									alt=""
+								/>
+							</a>
+						</div>
+					</div>
+				</div>
+			</header>
+
+			<div class="relative">
+				<div class="mx-auto max-w-7xl">
+					<div class="relative z-10 pt-14 lg:w-full lg:max-w-2xl">
+						<svg
+							class="absolute inset-y-0 right-8 hidden h-full w-80 translate-x-1/2 transform fill-white lg:block"
+							viewBox="0 0 100 100"
+							preserveAspectRatio="none"
+							aria-hidden="true"
+						>
+							<polygon points="0,0 90,0 50,100 0,100" />
+						</svg>
+
+						<div class="relative px-6 py-32 sm:py-40 lg:px-8 lg:py-56 lg:pr-0">
+							<div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-xl">
+								<div class="hidden sm:mb-10 sm:flex">
+									<div
+										class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-500 ring-1 ring-gray-900/10 hover:ring-gray-900/20"
+									></div>
+								</div>
+								<h1
+									class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl font-mono"
+								>
+									You'll never travel without our trip planner again
+								</h1>
+								<p
+									class="mt-6 text-lg leading-8 text-gray-600 font-serif text-6xl"
+								>
+									Build, organize, and map your itineraries in a free travel app
+									designed for vacations & road trips
+								</p>
+								<div class="mt-10 flex items-center gap-x-6">
+									<a
+										href="#"
+										class="rounded-full bg-amber-950 px-4 py-2.5 text-md font-semibold text-white shadow-sm hover:bg-amber-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 font-mono"
+										>Start Planning</a
+									>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="bg-gray-50 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
+					<img
+						class="aspect-[3/2] object-cover lg:aspect-auto lg:h-full lg:w-full"
+						src="../../public/images/landing-travel.jpg"
+						alt=""
+					/>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
