working on routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,23 +6,16 @@
 		<script src="https://cdn.tailwindcss.com"></script>
 		<link
 			rel="stylesheet"
-			href="public/css/style.css
-    "
+			href="../../public/css/style.css"
 		/>
+		<link rel="stylesheet" href="../../public/css/saved.css">
 		<title>TravelMate</title>
 	</head>
 	<body>
 
-		class="hero min-h-screen" style="background-image:
-		url(images/LANDINGPAGE.jpg)" >
 		<div id="center-div">
+		{{{body}}}
 
-			<div class="hero-overlay bg-opacity-0">
-
-			</div>
-			<section class="flex justify-center">
-
-			</section>
 		</div>
 
 	</body>
