--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,14 +13,10 @@
 	</head>
 	<body>
 
-		class="hero min-h-screen" style="background-image:
-		url(images/LANDINGPAGE.jpg)" >
+		
 		<div id="center-div">
 
-			<div class="hero-overlay bg-opacity-0">
-
-			</div>
-			<section class="flex justify-center">
+		{{{ body }}}
 
 			</section>
 		</div>
