adding routes and handlebars

--- a/views/partials/results.handlebars
+++ b/views/partials/results.handlebars
@@ -8,6 +8,7 @@
         <p>City:{{_embedded.events._embedded.venues[0].city.name}},
             {{_embedded.events._embedded.venues[0].state.stateCode}}</p>
         <a href="{{_embedded.events.url}}">Click here for more information!</a>
+        {{!-- <button class="saveBtn">Save</button> --}}
     </div>
 </section>
 
