--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		<link rel="stylesheet" href="../../public/css/style.css" />
-		<link rel="stylesheet" href="../../public/css/saved.css"/>
+		<link rel="stylesheet" href="../../public/css/saved.css" type="text/css"/>
 		<title>TravelMate</title>
 	</head>
 	<body>
