started api routed

--- a/views/userCities.handlebars
+++ b/views/userCities.handlebars
@@ -4,7 +4,7 @@
 
   <section class="saved-each-city">
     {{#each cities as |city|}}
-    <a href='/api/saved/city/{{city.id}}'>
+    <a href='/saved/city/{{city.id}}'>
       <h2 class="saved-city-name">{{city.name}}</h2>
       <img src="{{city.image}}" />
     </a>
