--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://cdn.tailwindcss.com"></script>
-		<link rel="stylesheet" href="../../public/css/style.css" />
-		<link rel="stylesheet" href="../../public/css/saved.css" type="text/css"/>
+		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="/css/saved.css" />
 		<title>TravelMate</title>
 	</head>
 	<body>
@@ -26,7 +26,7 @@
 									</h1>
 									<img
 										class="h-10 w-10"
-										src="../../public/images/location-dot-solid.svg"
+										src="/images/location-dot-solid.svg"
 										alt=""
 									/>
 								</div>
@@ -59,7 +59,7 @@
 								<span class="sr-only">Your Company</span>
 								<img
 									class="h-8 w-auto"
-									src="../../public/images/landing-travel.jpg"
+									src="/images/landing-travel.jpg"
 									alt=""
 								/>
 							</a>
@@ -92,27 +92,3 @@
 
 
 
-
-
-{{!-- <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="https://cdn.tailwindcss.com"></script>
-		{{!-- <link
-			rel="stylesheet"
-			href="../../public/css/style.css"
-		/>
-		<link rel="stylesheet" href="../../public/css/saved.css"> --}}
-		<title>TravelMate</title>
-	</head>
-	<body>
-
-		<div id="center-div">
-		{{{body}}}
-
-		</div>
-
-	</body>
-</html> --}}
