--- a/views/userEachCity.handlebars
+++ b/views/userEachCity.handlebars
@@ -4,7 +4,7 @@
   <h2 class="city-name">Events in {{city.name}}</h2>
 
   <section class="saved-each-event">
-    {{#each city.event as |event|}}
+    {{#each city.events as |event|}}
     <a href='/api/saved/event/{{event.id}}'>
         <h2 class="saved-event-name">{{event.event_name}}</h2>
         <img src="{{event.image}}" />
