update to add description

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -4,7 +4,7 @@
     <div class="event-details">
         <h3>{{event.name}}</h3>
         <p>Date: {{ event.dates.start.localDate}}</p>
-        <p>Description: {{ event.classification.genre.name}}</p>
+        <p>Description: {{ event.classifications.genre.name}}</p>
         <p>Venue: {{ event._embedded.venues.0.name}}</p>
         <p>City: {{ event._embedded.venues.0.city.name}},
             {{event._embedded.venues.0.state.stateCode}}</p>
