--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -4,18 +4,21 @@
     <div class="event-details">
         <h3>{{event.name}}</h3>
         <p>Date: {{ event.dates.start.localDate}}</p>
-        <p>Description: {{ event.classifications.genre.name}}</p>
+        <p>Description: {{ event.classifications.0.genre.name}}</p>
         <p>Venue: {{ event._embedded.venues.0.name}}</p>
         <p>City: {{ event._embedded.venues.0.city.name}},
             {{event._embedded.venues.0.state.stateCode}}</p>
         <a href="{{event.url}}">Click here for more information!</a>
-        <button class="saveBtn" data-image="{{event.images.0.url}}" data-city="{{event._embedded.venues.0.city.name}}">Save</button>
+        <button class="saveBtn" data-image="{{event.images.0.url}}"
+            data-city="{{event._embedded.venues.0.city.name}}">Save</button>
     </div>
 </section>
 {{/each}}
 
 
 <script src="/js/saveCity.js"></script>
+
+
 {{!-- This displays in cards. Do we want to display in cards, or in a table format?
 Is this the results of the API call, or the data returned from the database?
 Do we want the user to be able to select from a list, and save only the selected events? --}}
