added more stuff

--- a/public/css/saved.css
+++ b/public/css/saved.css
@@ -1,12 +1,14 @@
 .saved-cities {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .saved-each-city {
-    width: 50%;
+    width: 600px;
     height: 600px;
-    background-color: bisque;
+    background-color: rgb(21, 165, 167);
+    border: 1px solid black;
+    margin: 20px;
 }
 .saved-each-city img {
     object-fit: cover;
