--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -9,7 +9,7 @@
         <p>City: {{ event._embedded.venues.0.city.name}},
             {{event._embedded.venues.0.state.stateCode}}</p>
         <a href="{{event.url}}">Click here for more information!</a>
-        <button class="saveBtn" data-image="{{event.images.0.url}}" data-city="{{event._embedded.venues.0.city.name}}">Save</button>
+        <button class="saveBtn" data-image="{{event.images.0.url}}" data-city="{{event._embedded.venues.0.city.name}}" data-eventName="{{event.name}}" data-startDate="{{event.dates.start.localDate}}" data-genre="{{ event.classification.genre.name}}" data-venue="{{ event._embedded.venues.0.name}}" data-URL="{{event.url}}">Save</button>
     </div>
 </section>
 {{/each}}
