updated results, added css

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
 		<script src="https://cdn.tailwindcss.com"></script>
 		<link rel="stylesheet" href="/css/style.css" />
 		<link rel="stylesheet" href="/css/saved.css" />
+		<link rel="stylesheet" href="/css/results.css" />
 		<title>TravelMate</title>
 	</head>
 	<body>
