--- a/public/css/saved.css
+++ b/public/css/saved.css
@@ -1,20 +1,36 @@
-.saved-cities {
+
+
+.saved-each-city, .saved-each-event, .arount-event{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
-
-.saved-each-city {
-    width: 600px;
-    height: 600px;
-    background-color: rgb(21, 165, 167);
-    border: 1px solid black;
+.saved-each-city a, .saved-each-event a, .event{
+    width: 30%;
+    /* height: 600px; */
     margin: 20px;
-}
-.saved-each-city img {
-    object-fit: cover;
+    background-color: gray;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
 }
 
-.saveBtn {
+.saved-each-city h2, .saved-event-name, .event h2{
+    font-size: 300%;
+
+}
+
+
+.saved-each-city img, .saved-each-event img, .event img{
+    object-fit: cover;
+    height: 400px;
+    border-radius: 0 0 5px 5px;
+}
+
+.saveBtn, .saved-cities, .saved-events, .arount-event{
     position: absolute;
     top:200px;
 }
+
+
