--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,95 +1,57 @@
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="https://cdn.tailwindcss.com"></script>
-		<link rel="stylesheet" href="/css/style.css" />
-		<link rel="stylesheet" href="/css/saved.css" />
-		<link rel="stylesheet" href="/css/results.css" />
-		<title>TravelMate</title>
-	</head>
-	<body>
-		<div class="bg-white">
-			<header class="absolute inset-x-0 top-0 z-50">
-				<div class="mx-auto max-w-7xl">
-					<div class="px-6 pt-6 lg:max-w-2xl lg:pl-8 lg:pr-0">
-						<nav
-							class="flex items-center justify-between lg:justify-start"
-							aria-label="Global"
-						>
-							<div class="hero-content text-neutral-content">
-								<div class="max-w-md flex flex-row">
-									<h1
-										class="text-amber-900 font-serif text-5xl drop-shadow-2xl"
-									>
-										TravelMate
-									</h1>
-									<img
-										class="h-10 w-10"
-										src="/images/location-dot-solid.svg"
-										alt=""
-									/>
-								</div>
-							</div>
-							<div class="hidden lg:ml-12 lg:flex lg:gap-x-14">
-								<a
-									href="#"
-									class="text-md font-semibold leading-6 text-gray-900 font-mono ml-32"
-									>Log in</a
-								>
 
-								<a
-									href="#"
-									class="text-md font-semibold leading-6 text-gray-900 font-mono"
-									>Sign up</a
-								>
-							</div>
-						</nav>
-					</div>
-				</div>
-				<!-- Mobile menu, show/hide based on menu open state. -->
-				<div class="lg:hidden" role="dialog" aria-modal="true">
-					<!-- Background backdrop, show/hide based on slide-over state. -->
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script src="https://cdn.tailwindcss.com"></script>
+	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="/css/saved.css" />
+	<link rel="stylesheet" href="/css/results.css" />
+	<title>TravelMate</title>
+</head>
 
-					<div
-						class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
-					>
-						<div class="flex items-center justify-between">
-							<a href="#" class="-m-1.5 p-1.5">
-								<span class="sr-only">Your Company</span>
-								<img
-									class="h-8 w-auto"
-									src="/images/landing-travel.jpg"
-									alt=""
-								/>
-							</a>
+<body>
+	<div class="bg-white">
+		<header class="absolute inset-x-0 top-0 z-50">
+			<div class="mx-auto max-w-7xl">
+				<div class="px-6 pt-6 lg:max-w-2xl lg:pl-8 lg:pr-0">
+					<nav class="flex items-center justify-between lg:justify-start" aria-label="Global">
+						<div class="hero-content text-neutral-content">
+							<div class="max-w-md flex flex-row">
+								<h1 class="text-amber-900 font-serif text-5xl drop-shadow-2xl">
+									TravelMate
+								</h1>
+								<img class="h-10 w-10" src="/images/location-dot-solid.svg" alt="" />
+							</div>
 						</div>
+						<div class="hidden lg:ml-12 lg:flex lg:gap-x-14">
+							<a href="#" class="text-md font-semibold leading-6 text-gray-900 font-mono ml-32">Log in</a>
+
+							<a href="#" class="text-md font-semibold leading-6 text-gray-900 font-mono">Sign up</a>
+						</div>
+					</nav>
+				</div>
+			</div>
+			<!-- Mobile menu, show/hide based on menu open state. -->
+			<div class="lg:hidden" role="dialog" aria-modal="true">
+				<!-- Background backdrop, show/hide based on slide-over state. -->
+
+				<div
+					class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
+					<div class="flex items-center justify-between">
+						<a href="#" class="-m-1.5 p-1.5">
+							<span class="sr-only">Your Company</span>
+							<img class="h-8 w-auto" src="./images/landing-travel.jpg" alt="" />
+						</a>
 					</div>
 				</div>
-			</header>
+			</div>
+		</header>
 
-			<div class="main">
-				{{{body}}}
+		<div class="main">
+			{{{body}}}
 		</div>
-	</body>
+</body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
