--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -21,7 +21,7 @@
                         designed for vacations & road trips
                     </p>
                     <div class="mt-10 flex items-center gap-x-6">
-                        <a href="#"
+                        <a href="/search"
                             class="rounded-full bg-amber-950 px-4 py-2.5 text-md font-semibold text-white shadow-sm hover:bg-amber-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 font-mono">Start
                             Planning</a>
                     </div>
