--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="/css/login.css" />
 	<link rel="stylesheet" href="/css/saved.css" />
 	<link rel="stylesheet" href="/css/results.css" />
 	<title>TravelMate</title>
@@ -26,9 +27,11 @@
 							</div>
 						</div>
 						<div class="hidden lg:ml-12 lg:flex lg:gap-x-14">
-							<a href="#" class="text-md font-semibold leading-6 text-gray-900 font-mono ml-32">Log in</a>
+							<a href="/login" class="text-md font-semibold leading-6 text-gray-900 font-mono ml-32">Log
+								in</a>
 
-							<a href="#" class="text-md font-semibold leading-6 text-gray-900 font-mono">Sign up</a>
+							<a href="/signup" class="text-md font-semibold leading-6 text-gray-900 font-mono">Sign
+								up</a>
 						</div>
 					</nav>
 				</div>
