--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,20 @@
 <h2>First time here? Sign up below:</h2>
 <br>
-<form class="form login-form">
+<form id="newuser" class="form signup-form">
     <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="email-signup">email:</label>
+        <input class="form-input" type="text" id="email-signup" />
     </div>
     <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <label for="username-signup">username:</label>
+        <input class="form-input" type="text" id="username-signup" />
     </div>
     <div class="form-group">
-        <label for="password-login"> confirm password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <label for="password-signup">password:</label>
+        <input class="form-input" type="password" id="password-signup" />
     </div>
     <div class="form-group">
-        <button class="btn btn-primary" type="submit">submit</button>
+        <button id='signup' class="btn btn-primary">submit</button>
     </div>
 </form>
 
