--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
     <input class="form-input" type="password" id="password-login" />
   </div>
   <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
+    <button id="login" class="btn btn-primary">login</button>
   </div>
 </form>
 
