--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,12 +2,12 @@
 <br>
 <form id="newuser" class="form signup-form">
     <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-    </div>
-    <div class="form-group">
         <label for="username-signup">username:</label>
         <input class="form-input" type="text" id="username-signup" />
+    </div>
+    <div class="form-group">
+        <label for="email-signup">email:</label>
+        <input class="form-input" type="text" id="email-signup" />
     </div>
     <div class="form-group">
         <label for="password-signup">password:</label>
@@ -18,4 +18,4 @@
     </div>
 </form>
 
-<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
