added code for search function

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -2,11 +2,11 @@
 <br>
 <form class="form login-form">
     <div class="form-group">
-        <label for="email-login">Enter your destination:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="city">Enter your destination:</label>
+        <input class="form-input" type="text" id="city" />
     </div>
     <div class="form-group">
-        <button class="btn btn-primary" type="submit">What's going on?</button>
+        <button id="find-events" class="btn btn-primary">What's going on?</button>
     </div>
 </form>
 
