--- a/public/css/results.css
+++ b/public/css/results.css
@@ -20,6 +20,8 @@
 }
 
 .saveBtn {
-    position: absolute;
-    top: 200px;
+    margin-left: 100px;
+    padding: 10px;
+    border: 3px solid black;
+    border-radius: 7px;
 }
