--- a/public/css/saved.css
+++ b/public/css/saved.css
@@ -19,7 +19,7 @@
     align-items: center; */
 }
 
-.saved-each-city h2,
+.saved-each-city-name,
 .saved-event-name,
 .event h2 {
     font-size: 300%;
