--- a/views/userEachCity.handlebars
+++ b/views/userEachCity.handlebars
@@ -5,9 +5,9 @@
 
   <section class="saved-each-event">
     {{#each city.events as |event|}}
-    <a href='/api/saved/event/{{event.id}}'>
-        <h2 class="saved-event-name">{{event.event_name}}</h2>
-        <img src="{{event.image}}" />
+    <a href='/saved/event/{{event.id}}'>
+      <h2 class="saved-event-name">{{event.event_name}}</h2>
+      <img src="{{event.image}}" />
     </a>
     {{/each}}
   </section>
